<resources>
    <string name="app_name" translatable="false">DashFi</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="text_value_added_successfully">Value Added!</string>
    <string name="title_add_value">Add Value</string>
    <string name="title_all_values">All Values</string>
    <string name="text_error_during_to_add_value">Error to add the value!</string>
    <string name="text_error_getting_values">Error to load the values</string>
    <string name="text_add_value_title">Add</string>
    <string name="text_save_value_title">Save</string>
    <string name="text_add_value_dialog_title">Value</string>
    <string name="text_value_title_field">Title</string>
    <string name="text_label_title_field">Labels</string>
    <string name="text_zero_decimal_value" translatable="false">0.00</string>
    <string name="text_error_value_without_title">Error to add the value: no title!</string>
    <string name="title_default_dashboard">Default Dashboard</string>
    <string name="text_no_cards_message">No cards on this dashboard!</string>
    <string name="title_add_card">Add Card</string>
    <string name="text_card_title">Card</string>
</resources>
